--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gatsby": "^2.1.32",
+    "babel-plugin-styled-components": "^1.10.0",
+    "formik": "^1.5.1",
+    "gatsby-plugin-manifest": "^2.4.23",
+    "gatsby-plugin-react-helmet": "^3.0.9",
+    "gatsby-plugin-resolve-src": "^2.1.0",
+
+    "gatsby-plugin-segment": "^1.0.2",
+    "gatsby-plugin-styled-components": "^3.0.7",
     "netlify-identity-widget": "^1.0.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.13"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "build": "gatsby build",
+    "dev": "gatsby develop",
+    "fmt": "npx prettier \"{src/**,}/*.js\" --single-quote --no-semi --write"
+  },
 }
